exercices/kubernetes/deployment-nginx-with-configmap-secret-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.19.6
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
          readinessProbe:
            exec:
              command:
                - cat
                - /usr/share/nginx/html/index.html
            initialDelaySeconds: 1
            periodSeconds: 3
            failureThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: "/"
              port: 80
            initialDelaySeconds: 1
            periodSeconds: 3
            failureThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - name: my-configmap-html-volume
              mountPath: "/usr/share/nginx/html/configmap/"
              readOnly: true
            - name: my-secret-page-volume
              mountPath: "/usr/share/nginx/html/secret/"
              readOnly: true
            - name: my-local-pvc-volume
              mountPath: "/usr/share/nginx/html/pvc/"
              readOnly: false
      volumes:
        - name: my-configmap-html-volume
          configMap:
            name: my-configmap-html
        - name: my-secret-page-volume
          secret:
            secretName: my-secret-html
        - name: my-local-pvc-volume
          persistentVolumeClaim:
            claimName: my-local-pvc
