exercices/kubernetes/statefulset-nginx-base.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefulset
spec:
  selector:
    matchLabels:
      app: nginx-stateful
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx-stateful
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 80
