exercices/kubernetes/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-svc
spec:
  selector:
    app: nginx
  ports:
    - name: my-http-port
      protocol: TCP
      port: 80
      targetPort: 80
    - name: my-https-port
      protocol: TCP
      port: 443
      targetPort: 443
