exercices/kubernetes/service-nodeport-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-nodeport-svc
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - name: my-http-port
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
